<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Bglow Calculator</string>
    <string name="amount">Amount</string>
    <string name="money">%s</string>
    <string name="min">Time</string>
    <string name="total_time">%s</string>
    <string name="stitches_count">Stiches Count</string>
    <string name="quantity">Quantity</string>
    <string name="calculate">Calculate</string>
    <string name="calculator">Calculator</string>
    <string name="bglow2021">Bglow2021</string>
    <string name="invoice">Invoice</string>
    <string name="save">save</string>
    <string name="textExample">Is this Layout going to turn to image? Let see</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_phone">Customer Phone</string>
    <string name="customer_address">Customer Address</string>
    <string name="description">Descreption</string>
    <string name="rate">rate</string>
    <string name="rao_complex_opposite_adelabu_market_orita_challenge_ibadan_oyo_state">Rao Complex, Opposite adelabu market Orita challenge, Ibadan, Oyo State</string>
    <string name="phone">Tel: 07067376069</string>
    <string name="date" tools:ignore="TypographyDashes">Date: 23–12-2021</string>
    <string name="Customerphone">Phone: 08141208203</string>
    <string name="ChouseAdress">Ologede estate newgarage ibadan</string>
    <string name="CustomerName">Name: Olaifa Glory</string>
    <string name="describe">Description</string>
    <string name="SaveRate">Rate</string>
    <string name="TextTotal">Total:</string>
    <string name="Final_Reciept_Amount">%s</string>
    <string name="amountText">Amount</string>
    <string name="todo">TODO</string>
    <string name="description1">Description1</string>
    <string name="textview">TextView</string>
    <string name="preview">Preview</string>
    <string name="notice">Bank Details \nBank: GTbank \nAccount Name: Bglow Creation \nBank Account: 0159103570 \n</string>
    <string name="dateOfCollection">Date of Collection</string>

    <string-array name="speed_array">
        <item>200spm</item>
        <item>250spm</item>
        <item>300spm</item>
        <item>350spm</item>
        <item>400spm</item>
        <item>450spm</item>
        <item>500spm</item>
        <item>550spm</item>
        <item>600spm</item>
        <item>650spm</item>
        <item>700spm</item>
        <item>750spm</item>
        <item>800spm</item>
        <item>850spm</item>
        <item>900spm</item>
        <item>950spm</item>
        <item>1000spm</item>
    </string-array>

</resources>