<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".MainActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="171dp"
        android:layout_height="83dp"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/amount_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:text="@string/amount"
            android:textAlignment="center"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/amount_result"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="45dp"
            android:gravity="center_horizontal"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="0" />

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="178dp"
        android:layout_height="82dp"
        android:layout_marginTop="96dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardView">


        <TextView
            android:id="@+id/time_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:text="@string/min"
            android:textAlignment="center"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@+id/amount_result" />

        <TextView
            android:id="@+id/result_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="37dp"
            android:gravity="center_horizontal"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="min" />

    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/enter_stitches"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/stitches_count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView3"
        app:startIconDrawable="@drawable/ic_flow">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/stitches"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/enter_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/quantity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_stitches"
        app:startIconDrawable="@drawable/ic_baseline_equalizer_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:drawableLeft="@drawable/ic_baseline_equalizer_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_quantity"
        tools:ignore="RtlHardcoded,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/calculate"
        android:layout_width="289dp"
        android:layout_height="55dp"
        android:layout_marginTop="32dp"
        android:drawableLeft="@drawable/ic_baseline_send_24"
        android:elevation="50dp"
        android:text="@string/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        tools:ignore="RtlHardcoded,TextContrastCheck,TextContrastCheck,UnusedAttribute"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bglow2021"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculate"
        app:layout_constraintVertical_bias="0.957" />
</androidx.constraintlayout.widget.ConstraintLayout>